src/objects/ADvendio__CopyShipping__c.object
<CustomObject>
    <description>Stores the recipients and all related information for Voucher Copies and free copy shippings.</description>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the relevant Campaign Item.</description>
        <inlineHelpText>Link to the relevant Campaign Item.</inlineHelpText>
        <label>Campaign Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</field>
                <operation>equals</operation>
                <valueField>$Source.ADvendio__MediaCampaign__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Copy Shippings</relationshipLabel>
        <relationshipName>CopyShippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__DateSent__c</fullName>
        <description>Date on which the copies were sent.</description>
        <inlineHelpText>Date on which the copies were sent.</inlineHelpText>
        <label>Date sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Additional information for this shipment.</description>
        <inlineHelpText>Additional information for this shipment.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__DispatchType__c</fullName>
        <description>Please choose the Dispatch type for that recipient.</description>
        <inlineHelpText>Please choose the Dispatch type for that recipient.</inlineHelpText>
        <label>Dispatch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the relevant Media Campaign</description>
        <inlineHelpText>Link to the relevant Media Campaign</inlineHelpText>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Copy Shippings</relationshipLabel>
        <relationshipName>CopyShippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter here for which Magazine, Newspaper  the recipient get some free copies</description>
        <inlineHelpText>Please enter here for which Magazine, Newspaper  the recipient get some free copies.</inlineHelpText>
        <label>Medium</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Copy Shippings</relationshipLabel>
        <relationshipName>CopyShippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__NumberOfCopies__c</fullName>
        <description>Number of copies to be send to this recipient.</description>
        <inlineHelpText>Number of copies to be send to this recipient.</inlineHelpText>
        <label>Number of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientText__c</fullName>
        <description>Alternative recipient field if no existing contact is maintained. Please enter the full name and address details for the recipient here.</description>
        <inlineHelpText>If you do not use an existing contact please enter the full name and address details for the recipient here.</inlineHelpText>
        <label>Recipient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Recipient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Who will receive the copies?</description>
        <inlineHelpText>Who will receive the copies?</inlineHelpText>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Copy Shippings</relationshipLabel>
        <relationshipName>CopyShippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <description>From which date the Free Copy / Free Subscription is valid?</description>
        <inlineHelpText>From which date the Free Copy / Free Subscription is valid?</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <description>Until which date the Free Copy / Free Subscription Shipment is valid?</description>
        <inlineHelpText>Until which date the Free Copy / Free Subscription Shipment is valid?</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Copy Shipping</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Copy Shipping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copy Shippings</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__FreeCopy</fullName>
        <active>true</active>
        <description>Free Copy Shipping Recipient</description>
        <label>Free Copy</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__VoucherCopy</fullName>
        <active>true</active>
        <description>Voucher Copy Recipient</description>
        <label>Voucher Copy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>